--- a/_config.yml
+++ b/_config.yml
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
-  avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  name             : "Brandon G."
+  avatar           : "profile.jpg"
+  bio              : "Computer Engineering Student at Stony Brook University"
+  location         : "Stony Brook, NY"
   employer         :
   pubmed           :
   googlescholar    :
