updated projects page with responsive weather

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Brandon G."
   avatar           : "profile.jpg"
   bio              : "Computer Engineering Student at Stony Brook University"
-  location         : "Stony Brook, NY"
+  location         : "Buffalo, NY"
   employer         :
   pubmed           :
   googlescholar    :
