--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,5 @@ main:
   - title: "Ongoing Projects"
     url: /current-proj/      
     
-  - title: "Resume"
-    url: /resume/
+  - title: "Contact"
+    url: /contact/
