updated contact page to get rid of duplicate heading and added ongoing page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /projects/
 
   - title: "Ongoing Projects"
-    url: /current-proj/      
+    url: /ongoing/      
     
   - title: "Contact"
     url: /contact/
