--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Brandon G."
+title                    : "Brandon Guzy"
 title_separator          : "-"
-name                     : &name "Brandon G."
+name                     : &name "Brandon Guzy"
 description              : &description "personal description"
 url                      : https://bcguzy.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Brandon G."
+  name             : "Brandon Guzy"
   avatar           : "profile.jpg"
   bio              : "Computer Engineering Student at Stony Brook University"
   location         : "Buffalo, NY"
