--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_site_verification : UyOlwrA_mVCsBFMBgOD78EjiSUmFaUiuXD_rvQ17feyo
+google_site_verification : "UyOlwrA_mVCsBFMBgOD78EjiSUmFaUiuXD_rvQ17feyo"
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
